provisiona-infra-cf.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template para lançar uma instância Amazon Linux 2 com permissões para SSH, HTTPS e HTTP.

Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties: 
      InstanceType: t2.micro
      KeyName: key-ec2-vollmed
      ImageId: !Ref AMIId
      SecurityGroupIds: 
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: srv-vollmed-api
      UserData: 
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            # Atualizar o sistema operacional
            sudo yum update -y
            
            # Instalar Docker
            sudo amazon-linux-extras install docker -y
            sudo service docker start
            sudo systemctl enable docker

            # Adicionar o usuário 'ec2-user' ao grupo docker
            sudo usermod -a -G docker ec2-user
            
            # Instalar Docker Compose
            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
            sudo chmod +x /usr/local/bin/docker-compose
            
            # Permissões de sudo para docker
            echo 'ec2-user ALL=(ALL) NOPASSWD: /usr/bin/docker' | sudo tee /etc/sudoers.d/docker
        #dá para adicionar um passo para pegar o ip publico da instância e criar um dns no route 53

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties: 
      GroupDescription: Security Group for srv-vollmed-api
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

Parameters:
  AMIId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Description: Amazon Linux 2 AMI ID
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Outputs:
  InstanceId:
    Description: ID da instância criada
    Value: !Ref EC2Instance
  SecurityGroupId:
    Description: ID do grupo de segurança criado
    Value: !Ref SecurityGroup



#
